--- a/options.html
+++ b/options.html
@@ -1,1 +1,29 @@
-﻿
+﻿<html>
+    <head>
+        <title>AgileZen add Sub-story Options</title>
+        <link rel="stylesheet" href="options.css">
+        <script type="text/javascript" src="jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="options.js"></script>
+    </head>
+    <body>
+        <table>
+            <tr>
+                <td colspan="2"><h3>Options</h3></td>
+            </tr>
+            <tr>
+                <td><a href="http://dev.agilezen.com/concepts/authentication.html">AgileZen API-key:</a></td>
+                <td><input type="text" id="api_key" class="input-text"></td>
+            </tr>
+            <tr>
+                <td>AgileZen board number:</td>
+                <td><input type="text" id="board_number" class="input-text"></td>
+            </tr>
+            <tr>
+                <td colspan="2" class="button-row"><button id="save" class="button">Save</button></td>
+            </tr>
+            <tr>
+                <td colspan="2" class="status-row"><span id="status"></span></td>
+            </tr>
+        </table>
+    </body>
+</html>
