add user name to options

--- a/options.html
+++ b/options.html
@@ -19,6 +19,10 @@
                 <td><input type="text" id="board_number" class="input-text"></td>
             </tr>
             <tr>
+                <td>AgileZen user name:</td>
+                <td><input type="text" id="user_name" class="input-text"></td>
+            </tr>
+            <tr>
                 <td colspan="2" class="button-row"><button id="save" class="button">Save</button></td>
             </tr>
             <tr>
