add ZenDesk options

--- a/options.html
+++ b/options.html
@@ -23,6 +23,14 @@
                 <td><input type="text" id="user_name" class="input-text"></td>
             </tr>
             <tr>
+                <td>ZenDesk email:</td>
+                <td><input type="text" id="zendesk_email" class="input-text"></td>
+            </tr>
+            <tr>
+                <td>ZenDesk password:</td>
+                <td><input type="password" id="zendesk_password" class="input-text"></td>
+            </tr>
+            <tr>
                 <td colspan="2" class="button-row"><button id="save" class="button">Save</button></td>
             </tr>
             <tr>
